--- a/templates/AppMundial/03-blog.html
+++ b/templates/AppMundial/03-blog.html
@@ -27,10 +27,10 @@
         <h3 class="post-subtitle">{{Posts.equipo}}</h3>
         <p class="post-meta">{{Posts.creado}}</p>
         <p>
-            <button type="button" class="btn btn-primary"><a href="{% url 'Detail' Posts.id %}" style="color:white; text-decoration:none;">Leer Más</a></button>
+            <button type="button" class="btn btn-primary"><a href="{% url 'Detail' Posts.id %}" style="color:white; text-decoration:none;">Leer más</a></button>
             {% if user.is_superuser %}
             <button type="button" class="btn btn-primary"><a href="{% url 'post_Edit' Posts.id %}" style="color:white; text-decoration:none;">Editar</a></button>
-            <button type="button" class="btn btn-primary"><a href="{% url 'post_Delete' Posts.id %}" style="color:white; text-decoration:none;">Borrar</a></button>
+            <button type="button" class="btn btn-primary"><a href="{% url 'post_Delete' Posts.id %}" style="color:white; text-decoration:none;">Eliminar</a></button>
             {% endif %}
         </p>
         <!-- Divider-->
