--- a/templates/AppMundial/02-home.html
+++ b/templates/AppMundial/02-home.html
@@ -14,17 +14,17 @@
 {% endif %} {% endcomment %}
 
 <h1>FIFA World Cup Qatar 2022</h1>
-<header class="masthead" style="background-image: url('https://static01.nyt.com/images/2022/03/31/multimedia/world-cup-explainer/world-cup-explainer-superJumbo.jpg?quality=75&auto=webp)')">
+<br><header class="masthead" style="background-image: url('https://static01.nyt.com/images/2022/03/31/multimedia/world-cup-explainer/world-cup-explainer-superJumbo.jpg?quality=75&auto=webp)')">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 left-content-left">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
                     <h1>¡Bienvenido al sitio oficial de Qatar 2022!</h1>
-                    <span class="subheading">{{mensaje}}</span>
                 </div>
             </div>
         </div>
     </div>
 </header>
+<body><br>Bienvenidos al sitio oficial del Mundial de Qatar 2022. Aquí podrás encontrar información oficial acerca de selecciones y estadios como así también compartir información con fanáticos de todo el mundo en el blog. <br><br>¡Esperamos que lo disfrutes!</body>
 
 {% endblock contenido_base %}
