--- a/templates/06-1-login.html
+++ b/templates/06-1-login.html
@@ -1,4 +1,4 @@
-{% extends "AppMundial/01-plantilla_base.html" %}
+{% extends "01-plantilla_base.html" %}
 
 {% block contenido_base %}
 <form method="post">
