--- a/templates/08-about_us.html
+++ b/templates/08-about_us.html
@@ -1,4 +1,4 @@
-{% extends "AppMundial/01-plantilla_base.html" %}
+{% extends "01-plantilla_base.html" %}
 
 {% block contenido_base %}
 {% load static %}
@@ -6,16 +6,16 @@
 <header class="masthead" style="background-image: url('https://static01.nyt.com/images/2022/03/31/multimedia/world-cup-explainer/world-cup-explainer-superJumbo.jpg?quality=75&auto=webp)">
     <div class="container position-relative px-4 px-lg-5">
         <div class="site-heading">
-        <h1>About Us</h1>
+        <h1>Acerca de nosotros</h1>
         <h2>¿Quiénes somos?</h2>
-        <p><b>Una breve descripción de los integrantes del proyecto.</b></p>
+        <p><b>Breve descripción de los integrantes del proyecto.</b></p>
         </div>
     </div>
 </header>
 <hr>
 
 <div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'AppMundial/static/AppMundial/assets/img/FranT.jpeg'%}" align="left" alt="FranT" style="width:30%" align="">
+    <img src="{% static 'C:\Users\I536719\Desktop\PYTHON - CODERHOUSE\ProyectoFinalMundial\ProyectoMundial\static\AppMundial\assets\img\FranT.jpeg'%}" align="left" alt="FranT" style="width:30%" align="">
 </div>
 <div style="display:inline-block;">
     <h2>Francisco Terrile</h2>
@@ -25,7 +25,7 @@
 
 <hr>
 <div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'AppMundial/static/AppMundial/assets/img/GuilleA.jpeg'%}" align="left" alt="GuilleA" style="width:30%" align="">
+    <img src="{% static 'C:\Users\I536719\Desktop\PYTHON - CODERHOUSE\ProyectoFinalMundial\ProyectoMundial\static\AppMundial\assets\img\GuilleA.jpeg.jpeg'%}" align="left" alt="GuilleA" style="width:30%" align="">
 </div>
 <div style="display:inline-block;">
     <h2>Guillermo Acuña</h2>
@@ -35,7 +35,7 @@
 
 <hr>
 <div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'AppMundial/static/AppMundial/assets/img/FranM.jpeg'%}" align="left" alt="FranM" style="width:20%" align="">
+    <img src="{% static 'C:\Users\I536719\Desktop\PYTHON - CODERHOUSE\ProyectoFinalMundial\ProyectoMundial\static\AppMundial\assets\img\FranM.jpeg'%}" align="left" alt="FranM" style="width:20%" align="">
 </div>
 <div style="display:inline-block;">
     <h2>Francisco Moretti</h2>
