--- a/templates/01-plantilla_base.html
+++ b/templates/01-plantilla_base.html
@@ -25,7 +25,7 @@
     </head>
 
     <body>
-          <!-- Navigation-->
+        <!-- Navigation-->
         <nav class="navbar navbar-light bg-light static-top">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="{% url 'home' %}">HOME</a>
@@ -75,13 +75,13 @@
                     <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                         <ul class="list-inline mb-0">
                             <li class="list-inline-item me-4">
-                                <a href="https://www.facebook.com/FutbolMundialNoticias/"><i class="bi-facebook fs-3"></i></a>
+                                <a href="https://www.facebook.com/FutbolMundialNoticias/" target="_blank"><i class="bi-facebook fs-3"></i></a>
                             </li>
                             <li class="list-inline-item me-4">
-                                <a href="https://twitter.com/FIFAWorldCup"><i class="bi-twitter fs-3"></i></a>
+                                <a href="https://twitter.com/FIFAWorldCup" target="_blank"><i class="bi-twitter fs-3"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://www.instagram.com/fifaworldcup/?hl=es"><i class="bi-instagram fs-3"></i></a>
+                                <a href="https://www.instagram.com/fifaworldcup/?hl=es" target="_blank"><i class="bi-instagram fs-3"></i></a>
                             </li>
                         </ul>
                     </div>
