--- a/templates/08-about_us.html
+++ b/templates/08-about_us.html
@@ -7,7 +7,7 @@
     <div class="container position-relative px-4 px-lg-5">
         <div class="site-heading">
         <h1>Acerca de nosotros</h1>
-        <h2>¿Quiénes somos?</h2>
+        <h1>¿Quiénes somos?</h2>
         <p><b>Breve descripción de los integrantes del proyecto.</b></p>
         </div>
     </div>
@@ -15,30 +15,24 @@
 <hr>
 
 <div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'C:\Users\I536719\Desktop\PYTHON - CODERHOUSE\ProyectoFinalMundial\ProyectoMundial\static\AppMundial\assets\img\FranT.jpeg'%}" align="left" alt="FranT" style="width:30%" align="">
+    <img src="{% static 'AppMundial/assets/img/FranT.jpeg'%}" align="left" alt="FranT" style="width:15%" align="">
+    <p><h1>Francisco Terrile</h1></p>
+    <p>Tengo 25 años y vivo en Pilar, Provincia de Buenos Aires. Me recibí de Licenciado en Administración de Empresas en la Universidad Austral. Decidí comenzar en el mundo de la programación, empezando por Python. Me gustaría seguir adquiriendo conocimientos y desarrollando habilidades para poder desarrollar mi propia página web.</p>
+    <p>En mi tiempo libre me gusta jugar al fútbol, ir al gimnasio y andar en bicicleta. </p>
 </div>
-<div style="display:inline-block;">
-    <h2>Francisco Terrile</h2>
-    <p>Tengo 25 años y vivo en Pilar, Provincia de Buenos Aires. Me recibí de Licenciado en Administración de Empresas en la Universidad Austral. </p>
-    <p>En mi tiempo libre me gusta jugar al fútbol, ir al gimnasio y andar en bicicleta. Decidí comenzar en el mundo de la programación, empezando por Python. Me gustaría seguir adquiriendo conocimientos y desarrollando habilidades para poder desarrollar mi propia página web.</p>
+<br>
+<hr>
+<div style="display:inline-block;vertical-align:top;">
+    <img src="{% static 'AppMundial/assets/img/GuilleA.jpeg'%}" align="left" alt="GuilleA" style="width:15%" align="">
+    <p><h1>Guillermo Acuña</h1></p>
+    <p>Tengo 33 años, naci de Rio Grande, Tierra del Fuego y actualmente me encuentro viviendo en Rosario. Soy Ingeniero Mecanico recibido en la facultad de Ingenieria de la Universidad de la Plata. Esta es mi primera experiencia formal aprendiendo a programar y la encontre muy positiva, interesante y desafiante lo cual me incentiva a seguir desarrollandome en este campo. </p>
+    <p>En mi tiempo libre me gusta jugar al futbol, salir correr y disfrutar el tiempo con amigos.</p>
 </div>
 
 <hr>
 <div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'C:\Users\I536719\Desktop\PYTHON - CODERHOUSE\ProyectoFinalMundial\ProyectoMundial\static\AppMundial\assets\img\GuilleA.jpeg.jpeg'%}" align="left" alt="GuilleA" style="width:30%" align="">
-</div>
-<div style="display:inline-block;">
-    <h2>Guillermo Acuña</h2>
-    <p>Párrafo 1</p>
-    <p>Párrafo 2</p>
-</div>
-
-<hr>
-<div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'C:\Users\I536719\Desktop\PYTHON - CODERHOUSE\ProyectoFinalMundial\ProyectoMundial\static\AppMundial\assets\img\FranM.jpeg'%}" align="left" alt="FranM" style="width:20%" align="">
-</div>
-<div style="display:inline-block;">
-    <h2>Francisco Moretti</h2>
+    <img src="{% static 'AppMundial/assets/img/FranM.jpeg'%}" align="left" alt="FranM" style="width:15%" align="">
+    <p><h1>Francisco Moretti</h1></p>
     <p>Tengo 30 años, nacido y criado en Ciudad de Buenos Aires. Soy Contador Público de la Universidad de Buenos Aires y cuento con el certificado de Coder House por la carrera de Data Science. En la actualidad trabajo en la Administración Federal de Ingresos Públicos, y estoy aprendiendo programación para reorientar mi perfil laboral.</p>
     <p>Me gustan mucho los deportes, leer, y pasar tiempo al aire libre con mis perros, familia y amigos.  </p>
 </div>
