--- a/templates/03-2-createpost.html
+++ b/templates/03-2-createpost.html
@@ -10,6 +10,7 @@
                 <div class="col-md-10 col-lg-8 col-xl-7">
                     <div class="site-heading">
                         <h1>¿Qué quisieras compartir hoy?</h1>
+                        <h5>Tené en cuenta que podes copiar la URL de una imagen para incluirla dentro del mensaje.</h5>
                         <span class="subheading">{{mensaje}}</span>
                     </div>
                 </div>
@@ -19,6 +20,7 @@
 <body>
     <br> <form method="POST" style="margin-left: 10%;">
         {% csrf_token%}
+        {{ form.media}}
         {{ form.as_p}}
         <input type="submit" value="Publicar" class="btn btn-primary">
     </form>
