--- a/templates/03-3-deletepost.html
+++ b/templates/03-3-deletepost.html
@@ -5,7 +5,7 @@
 {% block contenido_base %}
 <header class="masthead" style="background-image: url('https://static01.nyt.com/images/2022/03/31/multimedia/world-cup-explainer/world-cup-explainer-superJumbo.jpg?quality=75&auto=webp')">
     <div class="container position-relative px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="row gx-4 gx-lg-5 justify-content-left">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
                     <h1>Blog del Mundial de Qatar 2022</h1>
