--- a/templates/05-estadios.html
+++ b/templates/05-estadios.html
@@ -11,7 +11,7 @@
                         <h1>Estadios</h1>
                         <h5>¿Cuál te gusta más?</h5>
                         <h5>Creá un nuevo post o entrá al chat para dar tu opinión y debatir.</h5>
-                        <p><b>A continuación te dejamos el detalle:</b></p>
+
                         <span class="subheading">{{mensaje}}</span>
                     </div>
                 </div>
@@ -20,7 +20,7 @@
     </header>
     <br>
     <hr>
-
+    <h2> A continuación te dejamos el detalle:</h2>
     <center><img src="{% static 'AppMundial/assets/img/Estadios.jpg'%}" alt="Estadios" width="1000" height="650">
 
         {% endblock contenido_base %}
