--- a/templates/08-about_us.html
+++ b/templates/08-about_us.html
@@ -15,26 +15,28 @@
 <hr>
 
 <div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'AppMundial/assets/img/FranT.jpeg'%}" align="left" alt="FranT" style="width:15%" align="">
+    <img src="{% static 'AppMundial/assets/img/FranT.jpeg'%}" align="left" alt="FranT"  style="float:left; margin-right: 15px" width="150" height="150" >
     <p><h1>Francisco Terrile</h1></p>
-    <p>Tengo 25 años y vivo en Pilar, Provincia de Buenos Aires. Me recibí de Licenciado en Administración de Empresas en la Universidad Austral. Decidí comenzar en el mundo de la programación, empezando por Python. Me gustaría seguir adquiriendo conocimientos y desarrollando habilidades para poder desarrollar mi propia página web.</p>
-    <p>En mi tiempo libre me gusta jugar al fútbol, ir al gimnasio y andar en bicicleta. </p>
+    <div class="row gx-4 gx-lg-5 left-content-left">
+    Tengo 25 años y vivo en Pilar, Provincia de Buenos Aires. Me recibí de Licenciado en Administración de Empresas en la Universidad Austral. Decidí comenzar en el mundo de la programación, empezando por Python. Me gustaría seguir adquiriendo conocimientos y desarrollando habilidades para poder desarrollar mi propia página web.
+    En mi tiempo libre me gusta jugar al fútbol, ir al gimnasio y andar en bicicleta. 
 </div>
 <br>
 <hr>
 <div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'AppMundial/assets/img/GuilleA.jpeg'%}" align="left" alt="GuilleA" style="width:15%" align="">
+    <img src="{% static 'AppMundial/assets/img/GuilleA.jpeg'%}" align="left" alt="GuilleA"  style="float:left; margin-right: 15px" width="150" height="150">
     <p><h1>Guillermo Acuña</h1></p>
-    <p>Tengo 33 años, naci de Rio Grande, Tierra del Fuego y actualmente me encuentro viviendo en Rosario. Soy Ingeniero Mecanico recibido en la facultad de Ingenieria de la Universidad de la Plata. Esta es mi primera experiencia formal aprendiendo a programar y la encontre muy positiva, interesante y desafiante lo cual me incentiva a seguir desarrollandome en este campo. </p>
-    <p>En mi tiempo libre me gusta jugar al futbol, salir correr y disfrutar el tiempo con amigos.</p>
+    <div class="row gx-4 gx-lg-5 left-content-center">
+    Tengo 33 años, naci de Rio Grande, Tierra del Fuego y actualmente me encuentro viviendo en Rosario. Soy Ingeniero Mecanico recibido en la facultad de Ingenieria de la Universidad de la Plata. Esta es mi primera experiencia formal aprendiendo a programar y la encontre muy positiva, interesante y desafiante lo cual me incentiva a seguir desarrollandome en este campo. 
+    En mi tiempo libre me gusta jugar al futbol, salir correr y disfrutar el tiempo con amigos.
 </div>
-
 <hr>
 <div style="display:inline-block;vertical-align:top;">
-    <img src="{% static 'AppMundial/assets/img/FranM.jpeg'%}" align="left" alt="FranM" style="width:15%" align="">
+    <img src="{% static 'AppMundial/assets/img/FranM.jpeg'%}" align="left" alt="FranM"  style="float:left; margin-right: 15px" width="150" height="150">
     <p><h1>Francisco Moretti</h1></p>
-    <p>Tengo 30 años, nacido y criado en Ciudad de Buenos Aires. Soy Contador Público de la Universidad de Buenos Aires y cuento con el certificado de Coder House por la carrera de Data Science. En la actualidad trabajo en la Administración Federal de Ingresos Públicos, y estoy aprendiendo programación para reorientar mi perfil laboral.</p>
-    <p>Me gustan mucho los deportes, leer, y pasar tiempo al aire libre con mis perros, familia y amigos.  </p>
+    <div class="row gx-4 gx-lg-5 left-content-left">
+    Tengo 30 años, nacido y criado en Ciudad de Buenos Aires. Soy Contador Público de la Universidad de Buenos Aires y cuento con el certificado de Coder House por la carrera de Data Science. En la actualidad trabajo en la Administración Federal de Ingresos Públicos, y estoy aprendiendo programación para reorientar mi perfil laboral.
+    Me gustan mucho los deportes, leer, y pasar tiempo al aire libre con mis perros, familia y amigos.  
 </div>
 <hr>
 
