--- a/templates/01-plantilla_base.html
+++ b/templates/01-plantilla_base.html
@@ -46,7 +46,11 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <li><a class="dropdown-item" href="{% url 'editar_perfil' %}">Editar mis datos</a></li>
+                    {% if user.avatar %}
+                    <li><a class="dropdown-item" href="{% url 'editar_avatar' %}">Editar Avatar</a></li>
+                    {% else %}
                     <li><a class="dropdown-item" href="{% url 'agregar_avatar' %}">Agregar Avatar</a></li>
+                    {% endif %}
                     <li><a class="dropdown-item" href="{% url 'logout' %}"><strong>Cerrar Sesión</strong></a></li>
                     </ul>
                 </div>
