--- a/templates/03-1-readpost.html
+++ b/templates/03-1-readpost.html
@@ -2,10 +2,11 @@
 
 {% load static%}
 
+
 {% block contenido_base %}
 
 <body>
-    <header class="masthead" style="background-image: url('{{posts.image}}')">
+    <header class="masthead" style="background-image: url('{{posts.image.url}}');">
         <div class="container position-relative px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 left-content-left">
                 <div class="col-md-10 col-lg-8 col-xl-7">
