--- a/templates/03-2-createpost.html
+++ b/templates/03-2-createpost.html
@@ -18,7 +18,7 @@
         </div>
     </header>
 <body>
-    <br> <form method="POST" style="margin-left: 10%;">
+    <br> <form method="POST" style="margin-left: 10%;" enctype="multipart/form-data">
         {% csrf_token%}
         {{ form.media}}
         {{ form.as_p}}
